cmake_minimum_required(VERSION 3.5)

project(Chapter04 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(list_swap list_swap.C)
add_executable(member_swap member_swap.C)
add_executable(nonmember_swap_friend nonmember_swap_friend.C)
add_executable(nonmember_swap_friend_forward nonmember_swap_friend_forward.C)
add_executable(nonmember_swap_func nonmember_swap_func.C)
add_executable(nonmember_swap_none nonmember_swap_none.C)
add_executable(nonmember_swap_std nonmember_swap_std.C)
add_executable(nonmember_swap_std_only nonmember_swap_std_only.C)
add_executable(std_swap_copyable std_swap_copyable.C)
add_executable(std_swap_movable std_swap_movable.C)
add_executable(std_swap_noncopyable std_swap_noncopyable.C)
add_executable(std_swap_nonmovable std_swap_nonmovable.C)
add_executable(swap_rollback swap_rollback.C)
add_executable(vector_empty vector_empty.C)
add_executable(vector_swap vector_swap.C)
