cmake_minimum_required(VERSION 3.5)

project(Chapter17 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

enable_testing()

find_package(GTest REQUIRED)
find_package(benchmark REQUIRED)

include_directories(${GTEST_INCLUDE_DIRS})

add_executable(01_decorator 01_decorator.C)
add_executable(01a_decorator 01a_decorator.C)
add_executable(02_decorator 02_decorator.C)
add_executable(02a_decorator 02a_decorator.C)
add_executable(03_decorator 03_decorator.C)
add_executable(03a_decorator 03a_decorator.C)
add_executable(04_decorator 04_decorator.C)
add_executable(04a_decorator 04a_decorator.C)
add_executable(04b_decorator 04b_decorator.C)
add_executable(04c_decorator 04c_decorator.C)
add_executable(04d_decorator 04d_decorator.C)
add_executable(05_locking_queue 05_locking_queue.C)
add_executable(05a_locking_queue 05a_locking_queue.C)
add_executable(06_adapter_curry 06_adapter_curry.C)
add_executable(06a_adapter_curry 06a_adapter_curry.C)
add_executable(06b_adapter_lambda 06b_adapter_lambda.C)
add_executable(06c_adapter_bind 06c_adapter_bind.C)
add_executable(06c_adapter_lambda 06c_adapter_lambda.C)
add_executable(06d_adapter_bind 06d_adapter_bind.C)
add_executable(07_template_template_adapter 07_template_template_adapter.C)
add_executable(07a_template_template_adapter 07a_template_template_adapter.C)
add_executable(07b_template_template_adapter 07b_template_template_adapter.C)
add_executable(07c_template_template_adapter 07c_template_template_adapter.C)
add_executable(08_time_adapter 08_time_adapter.C)
add_executable(08a_time_adapter 08a_time_adapter.C)
add_executable(09_value_decorators 09_value_decorators.C)
